--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE hmtl>
 <html>
+
 	<head>
 		<title>Google Home</title>
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/main.css">
 	</head>
+
 	<header>	
 		<ul class="main-nav">
 			<li><a href='#'>Gmail</a></li>
@@ -14,15 +16,34 @@
 			<li><a href='#'></a></li>
 		</div>
 	</header>
+
 	<body>
-		<img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png " alt="Google Logo" /> <br>
-		<input type="text" id=search name="search_field" />
-	</body>
+
+		<div class="google-logo">
+			<img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png " alt="Google Logo" />
+		</div>
+
+		<div class="search-box">
+			<input type="text" id="field" name="search_field" /> 
+		</div>
+
+		<div class="buttons">
+			<button type="submit" id="search" name="search_button">Google Search</button>
+			<button type="submit" id="lucky" name="lucky_button">I'm feeling lucky</button>
+		</div>
+
+		<p>Google Translate with improved offline mode. Get it now on Android or iOS</p>
+
+	<footer>
 		<ul class="foot-nav">
-			<li><a href='#'>Gmail</a></li>
-			<li><a href='#'>Images</a></li>
-			<li class="hello"><a href='#'></a></li>
-			<li><a href='#'></a></li>
-			<li><a href='#'></a></li>
+			<li><a href='#'>Advertising</a></li>
+			<li><a href='#'>Business</a></li>
+			<li class="left"><a href='#'>About</a></li>
+			<li><a href='#'>Privacy</a></li>
+			<li><a href='#'>Terms</a></li>
+			<li><a href='#'>Settings</a></li>
 		</ul>
+	</footer>
+
+	</body>
 </html>
