--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
 	</head>
 
 	<header>	
-		<ul class="main-nav">
-			<li><a href='#'>Gmail</a></li>
-			<li><a href='#'>Images</a></li>
-			<li><a href='#'></a></li>
-			<li><a href='#'></a></li>
-			<li><a href='#'></a></li>
-		</div>
+			<ul class="main-nav">
+				<li><a href='#'>Gmail</a></li>
+				<li><a href='#'>Images</a></li>
+				<li><a href='#'><img src="img/grid.png" alt="grid icon" class="grid-icon" /></a></li>
+				<li><a href='#'><img src="img/bell.png" alt="grid icon" class="bell-icon" /></a></li>
+				<li><button type="submit" id="sign-in" name="sign_in">Sign In</button></li>
+			</ul>
 	</header>
 
 	<body>
 
 		<div class="google-logo">
-			<img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png " alt="Google Logo" />
+			<img src="https://www.google.com/logos/doodles/2016/2016-doodle-fruit-games-day-16-5101196462260224-hp2x.gif" />
 		</div>
 
 		<div class="search-box">
-			<input type="text" id="field" name="search_field" /> 
+			<input type="text" id="field" name="search_field" class="icon" /> 
 		</div>
 
 		<div class="buttons">
